move blog post 2 image to same folder as .mdx file

--- a/content/blog/2/index.mdx
+++ b/content/blog/2/index.mdx
@@ -16,7 +16,7 @@ export const SoundCloud = () => (
 
 <SoundCloud />
 
-![](../mowgli.png)
+![](./mowgli.png)
 
 Once upon a time, in the dense jungles of the Indian wilderness, there lived a young boy named Mowgli. Mowgli had grown up among the animals, learning their ways and surviving on his own.
 
