copy: add blog post 3

--- a/content/blog/2023/02/01/index.mdx
+++ b/content/blog/2023/02/01/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Building a blog + portfolio website
+title: 🚧 Building a blog + portfolio website
 date: "2023-02-01T06:16:48.787Z"
 description: "using Gatsby and GraphQL"
 slug: "blog/gatsby-blog"
