--- a/content/blog/2023/02/02/index.mdx
+++ b/content/blog/2023/02/02/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: A tale by ChatGPT, narrated by 11L, w. art by dall-e
+title: 🏰 A tale by ChatGPT, narrated by 11L, w. art by dall-e
 date: "2023-02-02T06:16:48.787Z"
 description: "Mowgli in 2200"
 slug: "blog/mowgli-in-2200"
