--- a/posts/6s12mo.md
+++ b/posts/6s12mo.md
@@ -5,18 +5,21 @@ date: '2023-09-08'
 
 ### Why
 
-I was inspired by <a href="https://levels.io/12-startups-12-months/">levels</a> and <a href="https://blog.yongfook.com/12-startups-in-12-months.html">yongfook</a> to make a 12 startups in 12 months project, starting from around July 2023 
-to July 2024.
+I was inspired by [levels](https://levels.io/12-startups-12-months) and [yongfook](https://blog.yongfook.com/12-startups-in-12-months.html) to make a 12 startups in 12 months project, starting from around July 2023 to July 2024.
 
 However I want to put my own spin on it and make it 6 startups in 12 months so I can have a longer time frame (60 days) to build each app.
 
 The reasons to do this, is as levels says
 
+```
 Problem one: finishing
-> We creatives have one common problem: finishing things.
+We creatives have one common problem: finishing things.
+```
 
+```
 Problem two: launching
-> fear of failure
+fear of failure
+```
 
 ---
 
