--- a/posts/6s12mo.md
+++ b/posts/6s12mo.md
@@ -25,7 +25,7 @@ fear of failure
 
 S1: bookkss
 
-The first failed startup is https://bookkss.com (July 2023 - September 2023)
+The first failed startup is [bookkss](https://bookkss.com) (July 2023 - September 2023)
 
 The reason it failed was because it is challenging to get a good value proposition for a B2C app like bookkss (as an indie founder, 1 man orchestra) [1](https://twitter.com/levelsio/status/1451455052623745033) 
 
