--- a/posts/6s12mo.md
+++ b/posts/6s12mo.md
@@ -42,7 +42,7 @@ What I learned from this startup is to
 2. to target B2B niches (AI, etc.) for indie hackers, see source 1
 3. manage feature creep (lock down features of MVP) [4](https://fastercapital.com/content/Lean-Startup--Feature-Creep.html#Key-Takeaways-on-Lean-Startups-and-Feature-Creep) - build that out, and get feedback from users
 4. switching from next to vite to then back to next (this was my bad as I enabled the beta App router and had really slow site speeds for some reason, I wasn't able to diagnose it so I switched to Vite which solved the slow speeds, but I lost SSR (for SEO) which I wanted so I'm in the process of switching back to Next. This is due to each review being kind of like a blog post so we need web crawlers like Google to show these information pieces up on SERPs. 
-5. practice marketing e.g. [5](https://www.bannerbear.com/blog/one-year-of-marketing-a-saas-from-10k-to-20k-mrr/)
+5. practice marketing i.e. any kind of activity aligned to growth, that does not involve building features [5](https://www.bannerbear.com/blog/one-year-of-marketing-a-saas-from-10k-to-20k-mrr/)
 
 
 On to the next one! Which will be a B2B startup - https://helloremote.dev
