--- a/posts/6s12mo.md
+++ b/posts/6s12mo.md
@@ -1,5 +1,5 @@
 ---
-title: '6 startups, 12 months'
+title: '4 startups, 12 months'
 date: '2023-09-08'
 ---
 
@@ -7,7 +7,7 @@ date: '2023-09-08'
 
 I was inspired by [levels](https://levels.io/12-startups-12-months) and [yongfook](https://blog.yongfook.com/12-startups-in-12-months.html) to make a 12 startups in 12 months project, starting from around July 2023 to July 2024.
 
-However I want to put my own spin on it and make it 6 startups in 12 months so I can have a longer time frame (60 days) to build each app.
+However I want to put my own spin on it and make it 4 startups in 12 months so I can have a longer time frame (~90 days) to build each app.
 
 The reasons to do this, is as levels says
 
