Update and rename 6s12mo.md to 4s12mo.md
Signed-off-by: Andrew Njoo <adnjoo@gmail.com>

--- a/posts/4s12mo.md
+++ b/posts/4s12mo.md
@@ -25,9 +25,9 @@ fear of failure
 
 S1: bookkss
 
-The first failed startup is [bookkss](https://bookkss.com) (July 2023 - September 2023)
+The first startup is [bookkss](https://bookkss.com) (July 2023 - September 2023)
 
-The reason it failed was because it is challenging to get a good value proposition for a B2C app like bookkss (as an indie founder, 1 man orchestra) [1](https://twitter.com/levelsio/status/1451455052623745033) 
+It's challenging to get a good value proposition for a B2C app like bookkss (as an indie founder, 1 man orchestra) [1](https://twitter.com/levelsio/status/1451455052623745033) 
 
 For example, if we examine https://goodreads.com (a competitor), it is not easy to say how the website generates revenue (ads, partnerships, payments)[2](https://www.thepassivevoice.com/how-does-goodreads-make-money/). Amazon bought this website for $150 million in 2013 [3](https://www.washingtonpost.com/technology/2023/07/01/amazon-goodreads-elizabeth-gilbert/).
 
