--- a/posts/doet-review.mdx
+++ b/posts/doet-review.mdx
@@ -3,11 +3,11 @@ title: 'The Design of Everyday Things by Don Norman 📔'
 date: '2023-02-15'
 ---
 
-My notes on The Design of Everyday Things (DOET) by Don Norman.
+## My notes on The Design of Everyday Things (DOET) by Don Norman.
 
 DOET is a well-written book that provides a comprehensive look into the world of product design. The author argues that poor design is prevalent in our world and leads to frustration. He provides key principles of design, such as visibility and mapping, which are essential for creating products that are user-friendly and intuitive.
 
-1 THE PSYCHOPATHOLOGY OF EVERYDAY THINGS
+### 1 THE PSYCHOPATHOLOGY OF EVERYDAY THINGS
 
 poor design predominates - the world is filled with frustration
 
@@ -28,7 +28,7 @@ poor design predominates - the world is filled with frustration
 - Added functionality → added complexity
 - The problem is that if the product is revolutionary, it’s unlikely that anybody knows how to design it; it will take several tries.
 
-2 THE PSYCHOLOGY OF EVERYDAY ACTIONS
+### 2 THE PSYCHOLOGY OF EVERYDAY ACTIONS
 
 - Don says that people have a tendency to blame themselves for difficulties with technology
 - Taught helplessness
@@ -44,7 +44,7 @@ poor design predominates - the world is filled with frustration
 - Good mappings
 - Feedback
 
-3 KNOWLEDGE IN THE HEAD AND IN THE WORLD
+### 3 KNOWLEDGE IN THE HEAD AND IN THE WORLD
 
 - Short term memory (STM) and long term memory (LTM)
 - Reminding
@@ -52,11 +52,11 @@ poor design predominates - the world is filled with frustration
 - Labels are important and often necessary, but the appropriate use of natural mappings can minimize the need for them.
 - Tradeoff between Knowledge in the World and in the Head
 
-4 - KNOWING WHAT TO DO
+### 4 - KNOWING WHAT TO DO
 
 - Sound can be used to improve visibility of a product
 
-5 - TO ERR IS HUMAN
+### 5 - TO ERR IS HUMAN
 
 - Errors come in several forms. Two fundamental categories are slips and mistakes.
 - In part, slips result from a lack of attention.
@@ -65,7 +65,7 @@ poor design predominates - the world is filled with frustration
 - Forcing function is a form of physical constraints eg pin in a grenade
 - Think of the user's point of view. Assume that every possible mishap will happen, so protect against it. Make actions reversible. Try to make them less costly
 
-6 - THE DESIGN CHALLENGE
+### 6 - THE DESIGN CHALLENGE
 
 - Much good design evolves - hill climbing
 - Designers are not typical users
@@ -76,7 +76,7 @@ poor design predominates - the world is filled with frustration
 - Organization/modularization
 - Worshipping of false images (complexity)
 
-USER-CENTERED DESIGN
+### USER-CENTERED DESIGN
 
 - the design model, the user's model, and the system image
 - Simplify the structure of tasks
@@ -85,6 +85,8 @@ USER-CENTERED DESIGN
 - Use constraints so that the user feels there is only one thing to do
 - Standardize and you simplify lives e.g. cars and clocks
 
-CONCLUSION
+---
+
+## CONCLUSION
 
 Overall, "The Design of Everyday Things" provides valuable insights for anyone involved in the design of products or systems, as well as for anyone who wants to better understand the impact of design on their daily lives. I can recommend it for anyone interested in the intersection of design, psychology, and technology.
