--- a/posts/building-blog-with-nextjs.mdx
+++ b/posts/building-blog-with-nextjs.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Building a blog with Next.js 🖥️'
 date: '2023-02-13'
+archive: true
 ---
 
 This website was created using Next.js and Material UI, with the blog posts being generated programmatically from markdown files.
