--- a/posts/bootcamp.mdx
+++ b/posts/bootcamp.mdx
@@ -15,6 +15,6 @@ I also learned about continuous integration (CI) through [CircleCI](https://circ
 
 In addition to these tools and concepts, I also gained valuable experience in test-driven development using [Jest](https://jestjs.io/) testing, which is a framework for writing automated tests in JavaScript. Through pair programming, I was able to collaborate with other developers and learn from their experiences.
 
-Finally, I completed the [100 Days of Code challenge](https://adnjoo.github.io/100d/) twice, which involved committing to coding every day for 100 days. This challenge helped me develop a daily coding habit and gave me the opportunity to practice and apply the skills I had learned throughout the bootcamp.
+Finally, I completed the [100 Days of Code challenge](https://andrewnjoo.github.io/100d/) twice, which involved committing to coding every day for 100 days. This challenge helped me develop a daily coding habit and gave me the opportunity to practice and apply the skills I had learned throughout the bootcamp.
 
 Overall, my experience at DevMountain was incredibly valuable and I feel much more confident in my ability to build and deploy full stack JavaScript applications. I would highly recommend this bootcamp to anyone looking to take their coding skills to the next level.
