--- a/posts/building-blog.mdx
+++ b/posts/building-blog.mdx
@@ -24,7 +24,7 @@ Within the src folder, there are several files, including:
 - layout.tsx: a root component that wraps all pages
 ```
 
-This [blog post](https://maxleiter.com/blog/build-a-blog-with-nextjs-13) was helpful to make the blog posts looks good e.g. syntax highlighting for code blocks. (1)
+I got help from a blog post from Max Leiter to make this site's blog posts look better e.g. syntax highlighting for code blocks. (1)
 
 🌞/🌚 mode (at the top ⬆️) is toggled with [next-themes](https://github.com/pacocoursey/next-themes)
 
