--- a/posts/building-blog.mdx
+++ b/posts/building-blog.mdx
@@ -5,7 +5,7 @@ date: '2024-01-21'
 
 This website was created using Next.js 14 (app router) and [daisyui](https://daisyui.com/), with the blog posts being generated programmatically from [MDX](https://mdxjs.com/) (markdown with JSX).
 
-The use of daisyui provides pre-built (opt-in Tailwind) UI components that make it simpler to iterate quickly. Additionally, deployment on [Vercel](https://vercel.com/) is ez-pz 🌱☀️.
+The use of daisyui provides pre-built (opt-in Tailwind) UI components that makes it simpler to iterate quickly. Additionally, deployment on [Vercel](https://vercel.com/) is ez-pz 🌱☀️.
 
 The project structure is organized as follows:
 
@@ -16,7 +16,7 @@ The project structure is organized as follows:
 - posts: contains the blog posts
 ```
 
-Within the src folder, there are several files, including:
+Within the `/src/app` folder, there are several files, including:
 
 ```markdown
 - /blog/[slug].tsx: a dynamic route for blog posts
@@ -24,15 +24,15 @@ Within the src folder, there are several files, including:
 - layout.tsx: a root component that wraps all pages
 ```
 
-I got help from a blog post from Max Leiter to make this site's blog posts look better e.g. syntax highlighting for code blocks. (1)
+I got help from from Max Leiter (1) to make this site's blog posts look better e.g. syntax highlighting for code blocks.
 
-🌞/🌚 mode (at the top ⬆️) is toggled with [next-themes](https://github.com/pacocoursey/next-themes)
+🌞/🌚 mode (at the top ⬆️) is toggled with [next-themes](https://github.com/pacocoursey/next-themes).
 
 There's also an [API](/api) route available. You can learn more in the [docs](https://nextjs.org/docs/pages/building-your-application/routing/api-routes). Cool huh? 🤔
 
 Overall, using Next.js streamlines the creation of this website. I am excited to continue exploring the advantages of SSR and SSG. 
 
-Source {'<'}/{'>'} code available (2).
+Source **{'<'}/{'>'}** code is available on GitHub (2).
 
 ---
 
@@ -43,9 +43,4 @@ Sources:
 
 ---
 
-Disclaimer:
-
-Blog post written with the aid of ChatGPT 🤖
-
 Website design is inspired by [Spotlight Tailwind](https://spotlight.tailwindui.com/)
-
