--- a/posts/ae.mdx
+++ b/posts/ae.mdx
@@ -3,6 +3,8 @@ title: 'After AI, comes AE ❆'
 date: '2024-03-07'
 ---
 
+`All thoughts start from emotions - Leonardo da Vinci`
+
 Artificial intelligence (AI) in the form of LLMs like ChatGPT/Claude, has made it easier for teams to automate
 'boring' tasks. However when we (humans) chat with LLMS, we know that they don't really feel anything under what they tell us.
 
