--- a/posts/2s12mod.mdx
+++ b/posts/2s12mod.mdx
@@ -52,7 +52,7 @@ HelloRemote (HR) is a job board for remote jobs.
 
 ---
 
-S3 and S4 are [XpenseTrackr.com](https://xpensetrackr.com) and [SubsTrackr](https://substrackr.com). They help users track expenses and subscriptions, respectively.
+S3 and S4 are [XTrack.com](https://xtrack.ing) and [SubsTrackr](https://substrackr.com). They help users track expenses and subscriptions, respectively.
 
 The first one is deployed onto railway.app.
 
