--- a/posts/building-blog.mdx
+++ b/posts/building-blog.mdx
@@ -3,9 +3,9 @@ title: 'Building a blog with Next.js 🖥️'
 date: '2024-01-21'
 ---
 
-This website was created using Next.js 14 (app router) and [daisyui](https://daisyui.com/), with the blog posts being generated programmatically from [MDX](https://mdxjs.com/) (markdown with JSX).
+This website was created using Next.js 14 (app router) and ~~[daisyui](https://daisyui.com/)~~ [radix](https://www.radix-ui.com/), with the blog posts being generated programmatically from [MDX](https://mdxjs.com/) (markdown with JSX).
 
-The use of daisyui provides pre-built (opt-in Tailwind) UI components that makes it simpler to iterate quickly. Additionally, deployment on [Vercel](https://vercel.com/) is ez-pz 🌱☀️.
+The use of ~~daisyui~~ radix provides pre-built UI components that makes it simpler to iterate quickly. Additionally, deployment on [Vercel](https://vercel.com/) is straightforward 🌱☀️.
 
 The project structure is organized as follows:
 
@@ -26,11 +26,9 @@ Within the `/src/app` folder, there are several files, including:
 
 I got help from from Max Leiter (1) to make this site's blog posts look better e.g. syntax highlighting for code blocks.
 
-🌞/🌚 mode (at the top ⬆️) is toggled with [next-themes](https://github.com/pacocoursey/next-themes).
+{/* 🌞/🌚 mode (at the top ⬆️) is toggled with [next-themes](https://github.com/pacocoursey/next-themes). */}
 
-There's also an [API](/api) route available. You can learn more in the [docs](https://nextjs.org/docs/pages/building-your-application/routing/api-routes). Cool huh? 🤔
-
-Overall, using Next.js streamlines the creation of this website. I am excited to continue exploring the advantages of SSR and SSG. 
+Overall, using Next.js streamlines the creation of this website, and enables features like SSR and SSG. 
 
 Source **{'<'}/{'>'}** code is available on GitHub (2).
 
