--- a/posts/building-blog.mdx
+++ b/posts/building-blog.mdx
@@ -3,9 +3,9 @@ title: 'Building a blog with Next.js 🖥️'
 date: '2024-01-21'
 ---
 
-This website was created using Next.js 14 (app router) and ~~[daisyui](https://daisyui.com/)~~ [radix](https://www.radix-ui.com/), with the blog posts being generated programmatically from [MDX](https://mdxjs.com/) (markdown with JSX).
+This website was created using Next.js 14 (app router) and [radix](https://www.radix-ui.com/), with the blog posts being generated programmatically from [MDX](https://mdxjs.com/) (markdown with JSX).
 
-The use of ~~daisyui~~ radix provides pre-built UI components that makes it simpler to iterate quickly. Additionally, deployment on [Vercel](https://vercel.com/) is straightforward 🌱☀️.
+Radix provides pre-built UI components that makes it simpler to iterate quickly. Additionally, deployment on [Vercel](https://vercel.com/) is straightforward 🌱☀️.
 
 The project structure is organized as follows:
 
