--- a/posts/2024/ddia.mdx
+++ b/posts/2024/ddia.mdx
@@ -495,3 +495,7 @@ ethical aspects of building DIA
 ## Conclusion
 
 good book to read; highly recommend ★★★★☆
+
+## Additional sources
+
+[A Primer on Database Replication](https://www.brianstorti.com/replication/)
