--- a/posts/2023/atomic-habits-review.mdx
+++ b/posts/2023/atomic-habits-review.mdx
@@ -51,8 +51,7 @@ This practice is the reverse of make it obvious, as you make it invisible.
 Chapter 8 talks about dopamine. Whenever
 you predict that an opportunity will be rewarding, your levels of dopamine spike in anticipation. Temptation bundling can be combined with habit stacking to build up new habits
 
-After [CURRENT HABIT], I will [HABIT I NEED].
-2. After [HABIT I NEED], I will [HABIT I WANT].
+After [CURRENT HABIT], I will [HABIT I NEED]. 2. After [HABIT I NEED], I will [HABIT I WANT].
 
 Chapter 9 is about herd behavior
 
