--- a/posts/2024/building-blog.mdx
+++ b/posts/2024/building-blog.mdx
@@ -3,9 +3,9 @@ title: 'Building a blog with Next.js 🖥️'
 date: '2024-01-21'
 ---
 
-This website was created using Next.js 14 (app router) and [radix](https://www.radix-ui.com/), with the blog posts being generated programmatically from [MDX](https://mdxjs.com/) (markdown with JSX).
+This website was created using Next.js 14 (app router) and [shadcn](https://ui.shadcn.com/), with the blog posts being generated programmatically from [MDX](https://mdxjs.com/) (markdown with JSX).
 
-Radix provides pre-built UI components that makes it simpler to iterate quickly. Additionally, deployment on [Vercel](https://vercel.com/) is straightforward 🌱☀️.
+Shadcn provides pre-built UI components that makes it easier to iterate quickly. Additionally, deployment on [Vercel](https://vercel.com/) is straightforward 🌱.
 
 The project structure is organized as follows:
 
@@ -28,7 +28,7 @@ I got help from from Max Leiter (1) to make this site's blog posts look better e
 
 {/* 🌞/🌚 mode (at the top ⬆️) is toggled with [next-themes](https://github.com/pacocoursey/next-themes). */}
 
-Overall, using Next.js streamlines the creation of this website, and enables features like SSR and SSG. 
+Overall, using Next.js streamlines the creation of this website, and enables features like SSR and SSG.
 
 Source **{'<'}/{'>'}** code is available on GitHub (2).
 
